--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXmaVfw8&k=Job&j=ovyDafwA&__jvst=Employee+Referral+&__jvsd=sB6OMgw2&__jvsc=Twitter&bid=neyXVLwU'>Northcentral University Careers - Jr. Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/logdna/jobs/4374202002'>Job Application for Software Engineering Manager at LogDNA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -59,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/YoMJA08qsI/Software-Engineer-Robotics'>Software Engineer, Robotics - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/YoMJA08qsI/Software-Engineer-Robotics'>Software Engineer, Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -83,7 +87,7 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -133,7 +137,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/tsg1yif6ye3oaebo6con41cwdc'>Senior Software Engineer: Ruby-on-Rails | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/tsg1yif6ye3oaebo6con41cwdc'>Senior Software Engineer: Ruby-on-Rails | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -151,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -187,7 +191,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -385,7 +389,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -426,7 +430,7 @@ riskmethods.</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of C++ Software Engineer at Rovco.</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/58BE190F73?viewed=true'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/58BE190F73?viewed=true'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, AI Infrastructure at SmartNews
 , Inc.</p>
@@ -440,13 +444,9 @@ Platform) at SmartNews, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Java Software Engineer at Deposit Solutions GmbH.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=o2yV9fwo&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nm7WUKwy'>WP Engine Careers - Senior Staff Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=o2yV9fwo&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nm7WUKwy'>WP Engine Careers - Senior Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin,</span></p>
 <p>Posted on:: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/wellsky/jobs/1760626'>Job Application for Software Engineer at WellSky </a></h5> 
-<p><span class="badge badge-light">Kansas, United States</span></p>
-<p>Posted on: 2019-07-26</p>
 <hr/>
 
 
